--- a/paper/2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/main.tex
+++ b/paper/2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/main.tex
@@ -12,8 +12,8 @@
 
 
 %%%%% Front Cover %%%%%
-\title{Response-Time Analysis of ROS 2 Processing Chains Under Reservation-Based Scheduling}
-\subtitle{Euromicro Conference on Real-Time System (ECRTS), 2019}
+\title{Title}
+\subtitle{conference, year}
 \author{矢野 篤志}
 \date{\today}
 \institute[EMBIV]{EMBIV}
@@ -25,30 +25,24 @@
 
 \maketitle
 
-% \summary{1}{0}
-\input{abstract.tex}
+% \summary{0}{0}
+% \input{abstract.tex}
 
 \begin{frame}{Outline}
     \setbeamertemplate{section in toc}[sections numbered]
     \scriptsize\tableofcontents[hideallsubsections]
 \end{frame}
 
-% \input{prior_knowledge.tex}
-% \input{introduction.tex}
-% \input{background.tex}
-\input{system_model.tex}
-\input{response_time_analysis_for_processing_chains.tex}
-% \input{case_study.tex}
-% \input{related_work.tex}
-% \input{limitations_extensions_and_conclusions.tex}
+\input{prior_knowledge.tex}
+% \input{XXX.tex}
 
 \lastpage
 
-\section*{Reference}
-\begin{frame}[allowframebreaks]{Reference}
-    \beamertemplatetextbibitems
-    \bibliographystyle{unsrt}
-    \bibliography{\beamerDir/bibtex/master_reference}
-\end{frame}
+% \section*{Reference}
+% \begin{frame}[allowframebreaks]{Reference}
+%     \beamertemplatetextbibitems
+%     \bibliographystyle{unsrt}
+%     \bibliography{\beamerDir/bibtex/master_reference}
+% \end{frame}
 
 \end{document}
