--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/system_model.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/system_model.tex
@@ -1,27 +1,27 @@
 % !TeX root = main.tex
 
-\section{System Model}
+\section{SYSTEM MODEL}
 \label{sec: system model}
 
-\begin{frame}{セクションサマリ}
-    \begin{itembox}[l]{\textbf{目的}}
-        ROS システムのタイミング関連の側面のモデル, そのコールバック, およびそれらのアクティベーション関係を紹介する
-    \end{itembox}
-\end{frame}
+% \begin{frame}{セクションサマリ}
+%     \begin{itembox}[l]{\textbf{目的}}
+%         ROS システムのタイミング関連の側面のモデル, そのコールバック, およびそれらのアクティベーション関係を紹介する
+%     \end{itembox}
+% \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 始めに, 本論文で登場する表記法・用語の表を示す
-        \item 基本的な表記法・用語は資料中で説明無しで使用する
-        \item 別ファイルで開く・印刷するなどして, 常に参照できる状態にしておくことを推奨する
-    \end{itemize}
-\end{frame}
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item 始めに, 本論文で登場する表記法・用語の表を示す
+%         \item 基本的な表記法・用語は資料中で説明無しで使用する
+%         \item 別ファイルで開く・印刷するなどして, 常に参照できる状態にしておくことを推奨する
+%     \end{itemize}
+% \end{frame}
 
-\input{symbols_terms.tex}
+% \input{symbols_terms.tex}
 
 \begin{frame}{DAGへのモデル化}
     \begin{itemize}
-        \item ROS システムを, 一連のコールバック $\mathcal{C}=\left\{c_{1}, \ldots, c_{n}\right\}$ と一連の有向辺 $\mathcal{E} \subseteq \mathcal{C} \times \mathcal{C}$ で構成される直接非巡回グラフ (DAG) $\mathcal{D}=\{\mathcal{C}, \mathcal{E}\}$ としてモデル化
+        \item ROS システムを, 一連のコールバック $\mathcal{C}=\left\{c_{1}, \ldots, c_{n}\right\}$ と一連の有向辺 $\mathcal{E} \subseteq \mathcal{C} \times \mathcal{C}$ で構成される有向非巡回グラフ (DAG) $\mathcal{D}=\{\mathcal{C}, \mathcal{E}\}$ としてモデル化
         \item 各コールバックは無限のインスタンスシーケンスをリリースする
     \end{itemize}
     \assume{$\mathcal{D}$ は固定されている, すなわち, コールバックは実行時にシステムに参加したりシステムから離れたりしない}
@@ -34,24 +34,24 @@
     \end{block}
 \end{frame}
 
-\begin{frame}{pending, ready}
-    コールバックはDDS レイヤがメッセージを受信したとき, またはタイマ周期でアクティベーションされる
-    \begin{definition}[pending]
-        コールバックのインスタンスがアクティベーションされてから完了するまでの間, そのインスタンスは pending である
-    \end{definition}
-    \begin{definition}[ready]
-        コールバックインスタンスが pending だが実行されていない場合, そのインスタンスは ready である
-    \end{definition}
-\end{frame}
+% \begin{frame}{pending, ready}
+%     コールバックはDDS レイヤがメッセージを受信したとき, またはタイマ周期でアクティベーションされる
+%     \begin{definition}[pending]
+%         コールバックのインスタンスがアクティベーションされてから完了するまでの間, そのインスタンスは pending である
+%     \end{definition}
+%     \begin{definition}[ready]
+%         コールバックインスタンスが pending だが実行されていない場合, そのインスタンスは ready である
+%     \end{definition}
+% \end{frame}
 
 \begin{frame}{エッジ}
     \begin{itemize}
         \item 各エッジ $\left(c_{i}, c_{j}\right) \in \mathcal{E}$ は, $c_{i}$ から $c_{j}$ へのアクティベーション関係を示す
         \item $c_{i}$ のインスタンスの実行中に, $c_{j}$ のインスタンスを 1 つまでアクティベーションする
-        \item コールバックは, 複数のpublisherを持つトピックにsubscribeする場合にのみ, 複数のエッジを持つことができる
-        \begin{itemize}
-            \item この場合, 全てのsubscriberは, トピックにpublishされたメッセージごとに 1 回トリガされる
-        \end{itemize}
+        \item コールバックは, 複数のpublisherがあるトピックをsubscribeする場合, 複数のエッジを持つ
+              \begin{itemize}
+                  \item この場合, 全てのsubscriberは, トピックにpublishされたメッセージごとに 1 回トリガされる
+              \end{itemize}
     \end{itemize}
 \end{frame}
 
@@ -59,25 +59,32 @@
     \fitimage{
         \begin{itemize}
             \item ROS グラフ $\mathcal{D}$ は, 複数のソースコールバックとシンクコールバックを持つことができる
-            \item 各ソースは, 1 つまたは複数のコールバックチェーン $\gamma^{x}=\left(c_{s}, \ldots, c_{e}\right)$ を生成する
+            \item 各ソースは, 1 つまたは複数のコールバックチェーン $\gamma^{x}=\left(c_{s}, \ldots, c_{e}\right)$ に含まれる
             \item コールバックは複数のチェーンで共有される可能性がある
-            \item 複数のチェーンを持つ ROS グラフの例を図に示す
         \end{itemize}
     }{chain_example}
 \end{frame}
 
 \begin{frame}{アクティベーションモデル}
-    \begin{itemize}
-        \item 各ソースコールバック $c_{s}$ は, 外部イベント到着曲線 $\eta_{s}^{e}(\Delta)$ \cite{henia2005system, leboudec2001theory, thiele2000real}に関連付けられている
-        \item 本論文では一般性を失わず, $\Delta>0$ かつ $\eta_{s}^{e}(\Delta)>0$ を想定する
-    \end{itemize}
+    各ソースコールバック $c_{s}$ は, 外部イベント到着曲線 $\eta_{s}^{e}(\Delta)$ を持つ
+    \begin{block}{外部イベント到着曲線 $\eta_{s}^{e}$}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+        \item $\eta_{s}^{e}(\Delta)$は任意の時間間隔 $[t, t+\Delta)$ に到着するイベント数の上界
+        \item 例えば, タスク $T_{x}$ が定期的にトリガされる場合, $\eta_{x}^{e}(\Delta)=\lceil\frac{\Delta}{\operatorname{period}(x)}\rceil$ として表せる
+        \end{itemize}
+    \end{block}
+    % \begin{itemize}
+    %     \item 各ソースコールバック $c_{s}$ は, 外部イベント到着曲線 $\eta_{s}^{e}(\Delta)$ \cite{henia2005system, leboudec2001theory, thiele2000real}に関連付けられている
+    %     % \item 本論文では一般性を失わず, $\Delta>0$ かつ $\eta_{s}^{e}(\Delta)>0$ を想定する
+    % \end{itemize}
 \end{frame}
 
 \begin{frame}{エグゼキュータのスケジューリング}
     \begin{itemize}
         \item 本論文では, 組み込みのシングルスレッドエグゼキュータを採用する
-        \item OS に ROS エグゼキュータへの予測可能なサービスを保証させるために, 各エグゼキュータ (すなわち, 各スレッド) が単一の予約サーバに割り当てられ, 各予約サーバが単一のエグゼキュータを処理すると仮定する
-        \item したがって, エグゼキュータに割り当てられたコールバックは, 対応する予約サーバに割り当てられたと見なせる
+        \item 各エグゼキュータが単一の予約サーバに割り当てられ, 各予約サーバが単一のエグゼキュータを処理すると仮定する
+        % \item したがって, エグゼキュータに割り当てられたコールバックは, 対応する予約サーバに割り当てられたと見なせる
     \end{itemize}
 \end{frame}
 
