--- a/paper/2005_Compositional_Scheduling_Analysis_Using_Standard_Event_Models/abstract.tex
+++ b/paper/2005_Compositional_Scheduling_Analysis_Using_Standard_Event_Models/abstract.tex
@@ -1,5 +1,8 @@
 % !TeX root = main.tex
 
-\begin{frame}{提案の概要}
-    \todo{}
+\begin{frame}{概要}
+    \begin{itemize}
+        \item 最大イベント到着曲線 $\eta(\Delta)$ をどのように得るかを説明する
+        \item イベントモデルの概念を説明し, モデル毎の最大イベント到着曲線の違いを示す
+    \end{itemize}
 \end{frame}
