--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/background.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/background.tex
@@ -55,14 +55,14 @@
             \item イベント到着曲線は, 周期的およびイベント駆動型 (割り込み駆動型など) の両方のアクティベーションをモデル化するのに十分一般的である [47]
             \item 例えば, タスク $T_{x}$ が定期的にトリガされる場合, その到着曲線は $\eta_{x}^{e}(\Delta)=\left[\frac{\Delta}{\operatorname{period}(x)}\right]$ として表すことができる
             \item 非ソースタスクは, 導出されたアクティベーション曲線に従ってトリガされる
-            \item アクティベーション曲線は, 先行タスクによるアクティベーションレイテンシを反映し, 応答時間に依存するリリースジッターを考慮して, 到着曲線から取得される
+            \item アクティベーション曲線は, 先行タスクによるアクティベーションレイテンシを反映し, 応答時間に依存するリリースジッタを考慮して, 到着曲線から取得される
         \end{itemize}
     \end{frame}
 
     \begin{frame}{}
         \begin{itemize}
-            \item しかし, 応答時間はリリースジッターにも依存するため, 周期的な依存関係が生じる
-            \item この問題を解決するために, 分析はゼロの初期ジッターで開始し, 収束が達成されるまで繰り返し応答時間分析を適用し, 全てのジッター境界を更新する [42,63]
+            \item しかし, 応答時間はリリースジッタにも依存するため, 周期的な依存関係が生じる
+            \item この問題を解決するために, 分析はゼロの初期ジッタで開始し, 収束が達成されるまで繰り返し応答時間分析を適用し, 全てのジッタ境界を更新する [42,63]
             \item 収束は, 応答時間とジッタの間の単調な依存性によって (過負荷のないシステムの場合) 保証される (ジッタが大きいほど, 応答時間は長くなり, その逆も同様である)
             \item 基本的な CPA アプローチでは, チェーンのエンドツーエンドレイテンシを, 各タスクの個々の最悪応答時間の合計で制限する
             \item その後, [54, 56] のように, 分析精度を向上させる拡張機能が設計された
