--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/case_study.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/case_study.tex
@@ -35,7 +35,7 @@
         アクティベーションからチェーンの完了までの最悪応答時間
     \end{block}
     \begin{block}{時間駆動型のセットアップ}
-        ローカルプランナーの応答時間を計算し, センサ入力にジッターがある場合は, アクティベーション周期を最悪サンプリングレイテンシとして追加する
+        ローカルプランナーの応答時間を計算し, センサ入力にジッタがある場合は, アクティベーション周期を最悪サンプリングレイテンシとして追加する
     \end{block}
 \end{frame}
 
@@ -63,7 +63,7 @@
 
 \begin{frame}{[実験2] 結果}
     \fitimage{
-        ローカルプランナーのバジェットを45\%として, 入力ジッターが増加したときのエンドツーエンドレイテンシ
+        ローカルプランナーのバジェットを45\%として, 入力ジッタが増加したときのエンドツーエンドレイテンシ
     }{result2}
 \end{frame}
 
@@ -74,7 +74,7 @@
               \begin{itemize}
                   \item これらは, 処理チェーンの実行中にもう 1 つのイベントが到達できるポイント
               \end{itemize}
-        \item イベント駆動型システムは, ジッターが $40 \mathrm{~ms}$ 未満 (すなわち, 同時に最大 1 つのイベント) では優れた性能を発揮するが, それ以上のジッターでは自己干渉に陥る
+        \item イベント駆動型システムは, ジッタが $40 \mathrm{~ms}$ 未満 (すなわち, 同時に最大 1 つのイベント) では優れた性能を発揮するが, それ以上のジッタでは自己干渉に陥る
         \item 体系的な分析によって, このようなトレードオフを予測できる
     \end{itemize}
 \end{frame}
