--- a/paper/2021_ACM_TECS_HMDS_A_Makespan_Minimizing_DAG_Scheduler_for_Heterogeneous_Distributed_Systems/main.tex
+++ b/paper/2021_ACM_TECS_HMDS_A_Makespan_Minimizing_DAG_Scheduler_for_Heterogeneous_Distributed_Systems/main.tex
@@ -12,8 +12,8 @@
 
 
 %%%%% Front Cover %%%%%
-\title{Compositional Scheduling Analysis Using Standard Event Models (抜粋)}
-\subtitle{2005}
+\title{HMDS: A Makespan Minimizing DAG Scheduler for Heterogeneous Distributed Systems}
+\subtitle{ACM Transactions on Embedded Computing Systems (TECS), 2021}
 \author{矢野 篤志}
 \date{\today}
 \institute[EMBIV]{EMBIV}
@@ -25,7 +25,7 @@
 
 \maketitle
 
-% \summary{0}{0}
+\summary{2}{0}
 \input{abstract.tex}
 
 \begin{frame}{Outline}
@@ -33,9 +33,20 @@
     \scriptsize\tableofcontents[hideallsubsections]
 \end{frame}
 
-\input{input_event_models.tex}
-\input{output_event_models.tex}
+% \input{prior_knowledge.tex}
+% \input{introduction.tex}
+% \input{system_model_and_problem_statement.tex}
+% \input{the_proposed_schedulers.tex}
+% \input{performance_evaluation.tex}
+% \input{conclusion.tex}
 
 \lastpage
+
+% \section*{Reference}
+% \begin{frame}[allowframebreaks]{Reference}
+%     \beamertemplatetextbibitems
+%     \bibliographystyle{unsrt}
+%     \bibliography{\beamerDir/bibtex/master_reference}
+% \end{frame}
 
 \end{document}
