--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/design_of_ros_llama.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/design_of_ros_llama.tex
@@ -225,7 +225,7 @@
 \begin{frame}{初期バジェット設定後}
     \begin{itemize}
         \item 初期バジェットを割り当てたので, 他のエグゼキュータが $100 \%$ の帯域幅を持つという仮定を取り除く
-        \item その結果, 一部のコールバックは, ジッター効果の増加により, スケジューリング不能になる可能性がある
+        \item その結果, 一部のコールバックは, ジッタ効果の増加により, スケジューリング不能になる可能性がある
         \item アルゴリズム4行目からはこれに対処する
     \end{itemize}
 \end{frame}
