--- a/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/priority_driven_chain_aware_scheduling.tex
+++ b/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/priority_driven_chain_aware_scheduling.tex
@@ -49,7 +49,7 @@
 \begin{frame}{評価に使用する KPI [Behavior Planner のジッタ]}
     \begin{itemize}
         \item Behavior Planner ノードは, 設定された周期 $(100 \mathrm{msec})$ に従って, 正確に定期的に実行する必要がある
-        \item したがって, Behavior Planner ノードのジッターは低いほど良い
+        \item したがって, Behavior Planner ノードのジッタは低いほど良い
     \end{itemize}
 \end{frame}
 
@@ -101,7 +101,7 @@
 \begin{frame}{評価結果 [Behavior Planner のジッタ]}
     \fitimage{
         \begin{itemize}
-            \item 100 msec からのずれはジッターを示しているため, 観測値の範囲が小さいほど良い
+            \item 100 msec からのずれはジッタを示しているため, 観測値の範囲が小さいほど良い
             \item ROS2-PiCAS は全ての構成で ROS2-default よりも優れている
         \end{itemize}
     }{planner_jitter}
