--- a/setting.tex
+++ b/setting.tex
@@ -302,3 +302,4 @@
     \setbeamertemplate{footnote}[unnumbered]%
     \footnotetext{#1}%
 }
+\newcommand{\rcap}[2]{\color{red!80}\underbrace{\color{black!80}#1}_\text{#2}\color{black!80}}
