--- a/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/main.tex
+++ b/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/main.tex
@@ -12,8 +12,8 @@
 
 
 %%%%% Front Cover %%%%%
-\title{Title}
-\subtitle{conference, year}
+\title{Analysis of Federated and Global Scheduling for Parallel Real-Time Tasks}
+\subtitle{IEEE Real-Time Systems Symposium (RTSS), 2014}
 \author{矢野 篤志}
 \date{\today}
 \institute[EMBIV]{EMBIV}
