--- a/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/abstract.tex
+++ b/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/abstract.tex
@@ -4,7 +4,7 @@
     \begin{itemize}
         \item Unrelatedヘテロジニアスマルチプロセッサプラットフォーム上で実行される, 暗黙のデッドラインを持つ散発的DAGのフェデレートスケジューリングアルゴリズムを紹介
 
-        \item プロセッサの専用サブセットでのDAGのメイクスパンを見つけるための正式なスケジューリング可能性分析を提案
+        \item プロセッサの専用サブセットでのDAGのメイクスパンを見つけるための正式なスケジューラビリティ分析を提案
 
         \item DAG がデッドラインに間に合うように各DAGにUnrelated専用プロセッサの各サブセットを決定する問題に対して, プロセッサバリューと呼ばれる新しい概念を使用したヒューリスティックを提案
     \end{itemize}
