--- a/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/conclusion.tex
+++ b/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/conclusion.tex
@@ -5,10 +5,10 @@
 
 \begin{frame}{まとめ}
     \begin{itemize}
-        \item グローバルスケジューラを使用して, 専用クラスタ上の単一のDAGのタスクをスケジュールし, 分析によってメイクスパンの上限を示した
+        \item グローバルスケジューラを使用して, 専用クラスタ上の単一のDAGのタスクをスケジュールし, 分析によってメイクスパンの上界を示した
 
-        \item プロセッサバリューの概念を導入して, すべてのDAGがデッドラインに間に合うようにプロセッサをDAGに割り当てるフェデレートスケジューリングアルゴリズムを提案した
+        \item プロセッサバリューの概念を導入して, 全てのDAGがデッドラインに間に合うようにプロセッサをDAGに割り当てるフェデレートスケジューリングアルゴリズムを提案した
 
-        \item 合成DAGに基づくシミュレーション結果は,提案されたアプローチがUnrelatedマルチプロセッサのグローバルスケジューリングよりも高い受け入れ率を達成し, さらに，Relatedマルチプロセッサのフェデレートスケジューリングに関する以前の研究にも適用可能であることを示した
+        \item 合成DAGに基づくシミュレーション結果は,提案されたアプローチがUnrelatedマルチプロセッサのグローバルスケジューリングよりも高い受入率を達成し, さらに, Relatedマルチプロセッサのフェデレートスケジューリングに関する以前の研究にも適用可能であることを示した
     \end{itemize}
 \end{frame}
