--- a/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/evaluation.tex
+++ b/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/evaluation.tex
@@ -10,27 +10,27 @@
 \end{frame}
 
 \begin{frame}{評価指標}
-    各パラメータで200個のDAGセットのスケジューラビリティを判定し, 受け入れ率を計算する
-    \begin{block}{受け入れ率}
-        DAGセットのうち, すべてのDAGがデッドラインを満たしている割合
+    各パラメータで200個のDAGセットのスケジューラビリティを判定し, 受入率を計算する
+    \begin{block}{受入率}
+        DAGセットのうち, 全てのDAGがデッドラインを満たしている割合
     \end{block}
 \end{frame}
 
 \begin{frame}{グローバルスケジューリングとの比較}
     \fitimage{
-        フェデレートスケジューリングがグローバルスケジューリングよりも高い受け入れ率を達成
+        フェデレートスケジューリングがグローバルスケジューリングよりも高い受入率を達成
     }{eva1}
 \end{frame}
 
 \begin{frame}{結果の考察}
     \begin{itemize}
         \item フェデレートスケジューリングの場合, 実行する専用クラスタを持つDAGは, 他のDAGに干渉しない
-        \item 一方グローバルスケジューリングの場合, DAGは優先度の低い全てのDAGに干渉するため, 受け入れ率が低くなる
+        \item 一方グローバルスケジューリングの場合, DAGは優先度の低い全てのDAGに干渉するため, 受入率が低くなる
     \end{itemize}
 \end{frame}
 
 \begin{frame}{既存フェデレートスケジューリングとの比較}
     \fitimage{
-        提案アルゴリズムは, プロセッサバリューを考慮するため, 既存手法と比較してより高い受け入れ率を達成
+        提案アルゴリズムは, プロセッサバリューを考慮するため, 既存手法と比較してより高い受入率を達成
     }{eva2}
 \end{frame}
