--- a/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/introduction.tex
+++ b/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/introduction.tex
@@ -22,6 +22,6 @@
         \item フェデレートスケジューリングアルゴリズムの設計では, プロセッサバリューと呼ばれる概念に基づいたヒューリスティックを提案する
         \item プロセッサバリューは, DAGのデッドラインに間に合わせるためにunrelatedプロセッサが提供する全体的な利益を示す
         \item クラスタレベルでは Greedy, Unrelated, Minimum-speed-preference-index (GUM) スケジューラを使用してノードを割り当てる
-        \item GUMスケジューラのスケジューリング可能性分析も行う
+        \item GUMスケジューラのスケジューラビリティ分析も行う
     \end{itemize}
 \end{frame}
