--- a/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/makespan_of_a_single_dag.tex
+++ b/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/makespan_of_a_single_dag.tex
@@ -3,8 +3,8 @@
 \section{MAKESPAN OF A SINGLE DAG}
 \label{sec: MAKESPAN OF A SINGLE DAG}
 
-\begin{frame}{DAGのメイクスパンの上限定理}
+\begin{frame}{DAGのメイクスパンの上界Theorem}
     \fitimage{
-        専用クラスタ$\mathcal{K}_y$で, GUMによってスケジュールされる$G^j$のメイクスパンの上限 $\mathcal{X}_y^j$ は以下の式で計算できる
+        専用クラスタ$\mathcal{K}_y$で, GUMによってスケジュールされる$G^j$のメイクスパンの上界 $\mathcal{X}_y^j$ は以下の式で計算できる
     }{makespan}
 \end{frame}
