--- a/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/symbols_terms.tex
+++ b/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/symbols_terms.tex
@@ -6,9 +6,15 @@
             \adjustbox{max width=0.9\textwidth, max height=\slideheight}{
                 \centering\begin{tabular}{|c|l|} \hline
                     $\mathcal{P}$                                                & プロセッサの数                                                   \\\hline
-                    $\mathcal{M} = \{1, 2, ..., \mathcal{P} \}$                  & プロセッサインデックス                                           \\\hline
-                    $\Gamma = \{G^1, ..., G^\mathcal{N} \}$                      & 散発的DAGの集合                                                  \\\hline
-                    $j \in \{1, 2, ..., \mathcal{N} \}$                          & DAGインデックス                                                  \\\hline
+                    $\mathcal{M} = \{1, 2,
+\item
+\item ., \mathcal{P} \}$                  & プロセッサインデックス                                           \\\hline
+                    $\Gamma = \{G^1,
+\item
+\item ., G^\mathcal{N} \}$                      & 散発的DAGの集合                                                  \\\hline
+                    $j \in \{1, 2,
+\item
+\item ., \mathcal{N} \}$                          & DAGインデックス                                                  \\\hline
                     $G^j = (V^j, E^j)$                                           & DAG                                                              \\\hline
                     $T^j$                                                        & $G^j$の最小到着間隔                                              \\\hline
                     $D^j$                                                        & $G^j$の相対デッドライン                                          \\\hline
