--- a/paper/2021_ACM_TECS_HMDS_A_Makespan_Minimizing_DAG_Scheduler_for_Heterogeneous_Distributed_Systems/introduction.tex
+++ b/paper/2021_ACM_TECS_HMDS_A_Makespan_Minimizing_DAG_Scheduler_for_Heterogeneous_Distributed_Systems/introduction.tex
@@ -6,7 +6,7 @@
 \begin{frame}{DAG}
     \begin{itemize}
         \item サイバーフィジカルシステム (CPS) はとコンポーネントの機能間の複雑な相互作用のために, 有向非巡回グラフ(DAG)で表現される
-        \item ヘテロジニアスコンピュータプラットフォームが与えられた場合, リソースと優先順位の仕様をすべて満たしながら CPS のアプリケーションタスクの実行を成功させるために, DAGスケジューリング問題を解く必要がある
+        \item ヘテロジニアスコンピュータプラットフォームが与えられた場合, リソースと優先度の仕様を全て満たしながら CPS のアプリケーションタスクの実行を成功させるために, DAGスケジューリング問題を解く必要がある
     \end{itemize}
 \end{frame}
 
@@ -14,7 +14,7 @@
     \begin{itemize}
         \item DAGスケジューリング問題はNP-完全問題であるため, ヒューリスティックの設計に重点が置かれている
         \item リストベーススケジューリングは効率的なヒューリスティックとして知られている
-        \item 本論文では,「Heterogeneous Makespan minimizing DAG Scheduler（HMDS）」を開発する
+        \item 本論文では,「Heterogeneous Makespan minimizing DAG Scheduler (HMDS) 」を開発する
     \end{itemize}
 \end{frame}
 
