--- a/paper/2021_ACM_TECS_HMDS_A_Makespan_Minimizing_DAG_Scheduler_for_Heterogeneous_Distributed_Systems/system_model_and_problem_statement.tex
+++ b/paper/2021_ACM_TECS_HMDS_A_Makespan_Minimizing_DAG_Scheduler_for_Heterogeneous_Distributed_Systems/system_model_and_problem_statement.tex
@@ -20,7 +20,7 @@
 \end{frame}
 
 \begin{frame}{本論文の目標}
-    リソースと優先順位の制約を満たしながら, スケジュールの長さ（メイクスパン）が最小になるように, すべてのタスクの「実行開始時刻」と「プロセッサ割り当て」を決定する
+    リソースと優先度の制約を満たしながら, スケジュールの長さ (メイクスパン) が最小になるように, 全てのタスクの「実行開始時刻」と「プロセッサ割り当て」を決定する
 \end{frame}
 
 \begin{frame}{メイクスパンの定義}
