--- a/setting.tex
+++ b/setting.tex
@@ -18,6 +18,7 @@
 \usepackage{fancybox}
 \usepackage{ascmac}
 \usepackage{amsmath}
+\usepackage{multirow}
 
 %%%%% Settings %%%%%
 \graphicspath{{./figure}}
