--- a/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/main.tex
+++ b/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/main.tex
@@ -25,8 +25,8 @@
 
 \maketitle
 
-% \summary{0}{0}
-% \input{abstract.tex}
+\summary{2}{0}
+\input{abstract.tex}
 
 \begin{frame}{Outline}
     \setbeamertemplate{section in toc}[sections numbered]
@@ -34,7 +34,13 @@
 \end{frame}
 
 \input{prior_knowledge.tex}
-% \input{XXX.tex}
+\input{introduction.tex}
+\input{system_model.tex}
+\input{federated_scheduling.tex}
+\input{capacity_augmentation_bound.tex}
+\input{pracrical_considerations.tex}
+% \input{related_work.tex}
+\input{conclusion.tex}
 
 \lastpage
 
