--- a/paper/2021_ACM_TECS_HMDS_A_Makespan_Minimizing_DAG_Scheduler_for_Heterogeneous_Distributed_Systems/performance_evaluation.tex
+++ b/paper/2021_ACM_TECS_HMDS_A_Makespan_Minimizing_DAG_Scheduler_for_Heterogeneous_Distributed_Systems/performance_evaluation.tex
@@ -50,13 +50,13 @@
 
 \begin{frame}{メイクスパンの比較}
     \fitimage{
-        優れた性能を発揮したテストケース，同等の性能を発揮したテストケース，劣った性能を発揮したテストケースの割合
+        優れた性能を発揮したテストケース, 同等の性能を発揮したテストケース, 劣った性能を発揮したテストケースの割合
     }{eva1}
 \end{frame}
 
 \begin{frame}{パラメータを変動させた場合のSLRの比較}
     \fitimage{
-        HMDSはすべてのアルゴリズムを総合的に上回っている
+        HMDSは全てのアルゴリズムを総合的に上回っている
     }{eva2}
 \end{frame}
 
@@ -88,8 +88,8 @@
 \begin{frame}{許容Run-timeを変動させた場合の結果}
     \fitimage{
         \begin{itemize}
-            \item HMDS はより良い解を探索するために時間をかけることで，着実に性能を向上させている
-            \item 当然のことながら，実行時間に制限がある場合には，タスク数やプロセッサ数の増加に伴って性能が低下する
+            \item HMDS はより良い解を探索するために時間をかけることで, 着実に性能を向上させている
+            \item 当然のことながら, 実行時間に制限がある場合には, タスク数やプロセッサ数の増加に伴って性能が低下する
         \end{itemize}
     }{eva5}
 \end{frame}
